modules/python/hello-world/deployment/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-hello-world
spec:
  selector:
    run: py-hello-world
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
